Fix Too big border radius for hover container in multi- and single-select answers. #8

--- a/css/styles.css
+++ b/css/styles.css
@@ -505,7 +505,7 @@ body {
 
     .question-answer-item:hover {
         background-color: rgba(247,247,247, 0.75);
-        border-radius: 10px;
+        border-radius: 4px;
     }
 
     .question-answer-item + .question-answer-item {
@@ -562,7 +562,7 @@ body {
 
     .question-answer:hover {
         background-color: rgba(247,247,247, 0.75);
-        border-radius: 10px;
+        border-radius: 4px;
     }
 
     .question-answer > * {
